2.0  Wed Aug  4 15:59:08 CEST 2021
	- change build system to cmake.
	- add pkg-config file.
	- ptytty::login no longer writes a utmp, wtmp and lastlog
	  record when utmpx is available.
	- ptytty::login now provides the time with microseconds in
	  utmpx, wtmpx and lastlogx records.

1.8  Thu Feb 25 21:17:12 CET 2016
	- fix m4 underquoting bug that prevented utmpx detection from
	  working on systems without the utmp.h header, such as
	  freebsd 9 and newer.
	- fix ptytty::get hang on AIX.
	- ptytty::get on Solaris no longer makes the tty controlling
	  when the calling process does not have a controlling
	  terminal. Bug introduced in ptytty-1.4.

1.7  Thu Mar 19 22:04:33 CET 2015
	- fix various bugs that prevented the lib from working correctly on
	  some systems when using the helper process.
	- fix compilation on solaris with g++ >= 4.7.
	- fix compilation on freebsd/openbsd.
	- nuke the pid check when !PTYTTY_REENTRANT: it breaks urxvtd, and
          serves little purpose as it is off in normal builds anyway.
	- add ecb.h.

1.6  Sat Jan 21 16:59:22 CET 2012
	- fix compilation on solaris.
	- remove dependency on STL.

1.5  Thu Dec 22 23:32:08 CET 2011
	- INCOMPATIBLE CHANGE: ptytty::get no longer sets the pty fd
	  non-blocking.
	- the login_shell argument of ptytty::login is now properly
	  honoured.
	- ptytty::get no longer makes the pty a controlling terminal
	  when using posix_openpt.
	- remove support for utmpx ut_session extension, it serves no
	  purpose.
	- remove support for writing lastlog when the lastlog file is a
	  directory, no system is known to require this code.
	- do not clear ut_user in utmpx logout records because
	  pututxline fails otherwise on solaris.
	- fix writing of bsd style utmp when the tty is closed before
	  calling ptytty::login.
	- fix compilation on systems with bsd style utmp and no utmpx,
	  such as openbsd.

1.4  Wed Jun 29 14:36:19 CEST 2011
	- push stream modules in ptytty::get rather than in